[package]
name = "gtmpl_derive"
version = "0.3.3"
authors = ["Florian Merz <flomerz@gmail.com>"]
description = "Derive for gtmpl_value"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl_derive"
documentation = "https://docs.rs/crate/gtmpl_derive"
keywords = ["gtmpl_value", "gtmpl", "gtmpl-rust"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
gtmpl_value = "0.3"
proc-macro2 = "0.4"
