[package]
name = "gtmpl_derive"
version = "0.5.0"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
description = "Derive for gtmpl_value"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl_derive"
documentation = "https://docs.rs/crate/gtmpl_derive"
keywords = ["gtmpl_value", "gtmpl", "gtmpl-rust"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
gtmpl_value = "0.5"

[dev-dependencies]
anyhow = "1"
